--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* custom = ct */
+.ct-top-menu-item {
+    @apply cursor-pointer py-1 hover:text-gray-800 relative after:absolute after:bottom-0 after:left-0 after:w-0 after:h-0.5
+    after:bg-slate-800 hover:after:w-full after:transition-all after:ease-in-out duration-300;
+}
