--- a/src/input.css
+++ b/src/input.css
@@ -7,3 +7,11 @@
     @apply cursor-pointer py-1 hover:text-gray-800 relative after:absolute after:bottom-0 after:left-0 after:w-0 after:h-0.5
     after:bg-slate-800 hover:after:w-full after:transition-all after:ease-in-out duration-300;
 }
+
+.top-menu-expanded{
+    @apply absolute top-10 z-30 bg-white w-full flex flex-col items-center gap-3 py-3 animate-slideDown
+}
+
+.icon-social-res {
+    @apply lg:h-8 lg:w-8 sm:h-6 sm:w-6 h-4 w-4
+}
